--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html lang="zh-Hans, zh">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="author" content="LiuKairui" />
-		<meta name="description" content="MineCraft Release Based on Three.js" />
-		<link rel="icon" href="/src/assets/favicon.ico" />
-		<title>ThreeCraft</title>
-	</head>
 
-	<body>
-		<div id="app">
-			<div id="menu"></div>
-			<div id="background"></div>
-			<div id="HUD-stage">
-				<div id="bag"></div>
-				<div id="cross"></div>
-				<div id="controller"></div>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="author" content="LiuKairui" />
+	<meta name="description" content="MineCraft Release Based on Three.js" />
+	<link rel="icon" href="/src/assets/favicon.ico" />
+	<title>ThreeCraft</title>
+</head>
+
+<body>
+	<div class="" id="app">
+		<div class="covered background-img" id="menu">
+			<div class="title"></div>
+			<div class="box border-box">
+				<div class="btn">OK</div>
+				<div class="btn">OK</div>
+				<div class="btn">OK</div>
+				<div class="btn">OK</div>
+				<div class="btn">OK</div>
+				<div class="btn">OK</div>
 			</div>
-			<div id="game-stage"></div>
 		</div>
-		<script type="module" src="/src/index.ts"></script>
-	</body>
+		<div class="covered" id="background"></div>
+		<div class="covered" id="HUD-stage">
+			<div class="covered" id="bag"></div>
+			<div class="covered" id="cross"></div>
+			<div class="covered" id="controller"></div>
+		</div>
+		<div class="covered" id="game-stage"></div>
+	</div>
+	<script type="module" src="/src/index.ts"></script>
+</body>
+
 </html>
