--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 
 <body>
 	<div class="" id="app">
+		<div class="covered" id="game-stage"></div>
 		<div class="covered" id="HUD-stage">
 			<div class="covered" id="bag"></div>
-			<div class="covered" id="cross"></div>
+			<div class="covered" id="crosshairs"></div>
 			<div class="covered" id="controller"></div>
+			<div class="covered" id="fps"></div>
 		</div>
-		<div class="covered" id="game-stage"></div>
-		<div class="covered background-image" id="menu">
+		<div class="covered background-image hidden" id="menu">
 			<div class="title"></div>
 			<div class="box border-box">
 				<button class="button" disabled>单人游戏 </button>
@@ -26,10 +27,8 @@
 					<button class="button">单人游戏 </button>
 					<button class="button">单人游戏 </button>
 				</div>
-				<label for="mod1">123</label>
 				<input type="text" class="text-input" name="mod1">
 				<div class="box-line">
-					<!-- <label for="mod2">122</label> -->
 					<input type="text" class="text-input" name="mod2" id="32">
 					<input type="text" class="text-input" name="mod3" id="33">
 				</div>
@@ -49,6 +48,41 @@
 						<input type="range" class="range" id="volume" name="volume" min="0" max="11" step="0.1">
 					</div>
 				</div>
+				<div class="box-line">
+					<select class="select" name="S1" id="S1">
+						<option value="1">请选择</option>
+						<option value="2">鱼跃龙门</option>
+						<option value="3">龙飞凤舞</option>
+					</select>
+				</div>
+				<div class="box-line">
+					<select class="select" name="S1" id="S1">
+						<option value="1">请选择</option>
+						<option value="2">鱼跃龙门</option>
+						<option value="3">龙飞凤舞</option>
+					</select>
+					<select class="select" name="S1" id="S1">
+						<option value="1">请选择</option>
+						<option value="2">鱼跃龙门</option>
+						<option value="3">龙飞凤舞</option>
+					</select>
+				</div>
+				<div class="box-line">
+					<div class="checkbox-item">
+						<input type="checkbox" name="C11" id="C11"><label for="C11">PC端支持</label>
+					</div>
+					<div class="checkbox-item">
+						<input type="checkbox" name="C12" id="C12"><label for="C12">移动端支持</label>
+					</div>
+				</div>
+				<div class="checkbox-item">
+					<input type="checkbox" name="C13" id="C13"><label for="C13">Lorem ipsum dolor, sit aimed comments :)</label>
+				</div>
+				<div class="box-line text-left">Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum
+					dolor sit
+					Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit
+					Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit Lorem ipsum dolor sit
+					Lorem ipsum dolor sit </div>
 			</div>
 		</div>
 	</div>
