--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 				<div class="dark" id="crosshairs"></div>
 				<div class="covered" id="controller"></div>
 				<div id="fps">FPS:12</div>
-				<div class="covered" id="bag">
-				</div>
+				<div class="covered" id="bag"></div>
 			</div>
 			<div class="covered background-image hidden" id="menu">
 				<div class="title"></div>
