--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="zh-Hans, zh">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="author" content="LiuKairui" />
+		<meta name="description" content="MineCraft Release Based on Three.js" />
+		<link rel="icon" href="/src/assets/favicon.ico" />
+		<title>ThreeCraft</title>
+	</head>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="author" content="LiuKairui" />
-	<meta name="description" content="MineCraft Release Based on Three.js" />
-	<link rel="icon" href="/src/assets/favicon.ico" />
-	<title>ThreeCraft</title>
-</head>
-
-<body>
-	<div class="" id="app">
-		<div id="game-stage"></div>
-		<div id="HUD-stage">
-			<div id="controller"></div>
-		</div>
-		<!-- <div class="background-image covered mc-menu">
+	<body>
+		<div class="" id="app">
+			<div id="game-stage"></div>
+			<div id="HUD-stage">
+				<div id="controller"></div>
+			</div>
+			<!-- <div class="background-image covered mc-menu">
 			<div class="title"></div>
 			<div class="box border-box">
 				<button class="button" disabled>单人游戏</button>
@@ -84,14 +83,11 @@
 				</div>
 			</div>
 		</div> -->
-		<div class="background-image covered mc-menu">
-			<div class="title"></div>
-			<div class="box border-box color-white">
-				
+			<div class="background-image covered mc-menu">
+				<div class="title"></div>
+				<div class="box border-box color-white"></div>
 			</div>
 		</div>
-	</div>
-	<script type="module" src="/src/index.ts"></script>
-</body>
-
+		<script type="module" src="/src/index.ts"></script>
+	</body>
 </html>
