--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="zh-Hans, zh">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="author" content="LiuKairui" />
-		<meta name="description" content="MineCraft Release Based on Three.js" />
-		<link rel="icon" href="/src/assets/favicon.ico" />
-		<title>ThreeCraft</title>
-	</head>
 
-	<body>
-		<div class="" id="app">
-			<div id="game-stage"></div>
-			<div id="HUD-stage"></div>
-		</div>
-		<script type="module" src="/src/index.ts"></script>
-	</body>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="author" content="LiuKairui" />
+	<meta name="description" content="MineCraft Release Based on Three.js" />
+	<link rel="icon" href="/src/assets/favicon.ico" />
+	<title>ThreeCraft</title>
+</head>
+
+<body>
+	<div id="app"></div>
+	<script type="module" src="/src/index.ts"></script>
+</body>
+
 </html>
