--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html lang="zh-Hans, zh">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="author" content="LiuKairui" />
-		<meta name="description" content="MineCraft Release Based on Three.js" />
-		<link rel="icon" href="/src/assets/favicon.ico" />
-		<title>ThreeCraft</title>
-	</head>
+<html lang="zh-Hans">
 
-	<body>
-		<div id="app"></div>
-		<script type="module" src="/src/index.ts"></script>
-	</body>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="author" content="LiuKairui" />
+	<meta name="description" content="MineCraft Release Based on Three.js" />
+	<title>ThreeCraft</title>
+	<link rel="icon" href="/src/assets/pictures/icon/favicon.svg" type="image/svg+xml">
+	<link rel="alternate icon" href="/src/assets/pictures/icon/favicon-16x16.png" type="image/png" sizes="16x16">
+	<link rel="apple-touch-icon" href="/src/assets/pictures/icon/apple-touch-icon.png" sizes="180x180">
+	<link rel="mask-icon" href="/src/assets/pictures/icon/safari-pinned-tab.svg" color="#FFFFFF">
+	<meta name="theme-color" content="#87ceeb">
+</head>
+
+<body>
+	<div id="app"></div>
+	<script type="module" src="/src/index.ts"></script>
+	<script src="/registerSW.js"></script>
+</body>
+
 </html>
