--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<meta name="author" content="LiuKairui" />
 	<meta name="description" content="MineCraft Release Based on Three.js" />
 	<title>ThreeCraft</title>
-	<link rel="icon" href="/src/assets/pictures/icon/favicon.svg" type="image/svg+xml">
-	<link rel="alternate icon" href="/src/assets/pictures/icon/favicon-16x16.png" type="image/png" sizes="16x16">
-	<link rel="apple-touch-icon" href="/src/assets/pictures/icon/apple-touch-icon.png" sizes="180x180">
-	<link rel="mask-icon" href="/src/assets/pictures/icon/safari-pinned-tab.svg" color="#FFFFFF">
+	<link rel="icon" href="/pictures/icon/favicon.svg" type="image/svg+xml">
+	<link rel="alternate icon" href="/pictures/icon/favicon-16x16.png" type="image/png" sizes="16x16">
+	<link rel="apple-touch-icon" href="/pictures/icon/apple-touch-icon.png" sizes="180x180">
+	<link rel="mask-icon" href="/pictures/icon/safari-pinned-tab.svg" color="#FFFFFF">
 	<meta name="theme-color" content="#87ceeb">
 </head>
 
