--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="zh-Hans">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="author" content="LiuKairui" />
+		<meta name="description" content="MineCraft Release Based on Three.js" />
+		<title>ThreeCraft</title>
+		<link rel="icon" href="/pictures/icon/favicon.svg" type="image/svg+xml" />
+		<link rel="alternate icon" href="/pictures/icon/favicon-16x16.png" type="image/png" sizes="16x16" />
+		<link rel="apple-touch-icon" href="/pictures/icon/apple-touch-icon.png" sizes="180x180" />
+		<link rel="mask-icon" href="/pictures/icon/safari-pinned-tab.svg" color="#FFFFFF" />
+		<meta name="theme-color" content="#87ceeb" />
+	</head>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="author" content="LiuKairui" />
-	<meta name="description" content="MineCraft Release Based on Three.js" />
-	<title>ThreeCraft</title>
-	<link rel="icon" href="/pictures/icon/favicon.svg" type="image/svg+xml">
-	<link rel="alternate icon" href="/pictures/icon/favicon-16x16.png" type="image/png" sizes="16x16">
-	<link rel="apple-touch-icon" href="/pictures/icon/apple-touch-icon.png" sizes="180x180">
-	<link rel="mask-icon" href="/pictures/icon/safari-pinned-tab.svg" color="#FFFFFF">
-	<meta name="theme-color" content="#87ceeb">
-</head>
-
-<body>
-	<div id="app"></div>
-	<script type="module" src="/src/index.ts"></script>
-	<script src="/registerSW.js"></script>
-</body>
-
+	<body>
+		<div id="app"></div>
+		<script type="module" src="/src/index.ts"></script>
+		<script src="/registerSW.js"></script>
+	</body>
 </html>
